tester/testsuite/good/multiple_functions_2.jl
int plusOne(int x) {
    return x+1;
}

int main() {
    return plusOne(5);
}