tester/testsuite/bad/no_void_array2.jl
int main() {
    new void[10];
    return 0;
}

